mycc.output
   0  $accept : stmts $end

   1  stmts : stmts stmt
   2        |

   3  stmt : ';'
   4       | expr ';'
   5       | IF '(' expr M ')' stmt N ELSE L stmt L
   6       | WHILE '(' L expr M ')' stmt N L
   7       | DO stmt WHILE '(' expr ')' ';'
   8       | FOR '(' expr ';' expr ';' expr ')' stmt
   9       | RETURN expr ';'
  10       | '{' stmts '}'
  11       | error ';'

  12  expr : ID '=' expr
  13       | ID PA expr
  14       | ID NA expr
  15       | ID TA expr
  16       | ID DA expr
  17       | ID MA expr
  18       | ID AA expr
  19       | ID XA expr
  20       | ID OA expr
  21       | ID LA expr
  22       | ID RA expr
  23       | expr OR expr
  24       | expr AN expr
  25       | expr '|' expr
  26       | expr '^' expr
  27       | expr '&' expr
  28       | expr EQ expr
  29       | expr NE expr
  30       | expr '<' expr
  31       | expr '>' expr
  32       | expr LE expr
  33       | expr GE expr
  34       | expr LS expr
  35       | expr RS expr
  36       | expr '+' expr
  37       | expr '-' expr
  38       | expr '*' expr
  39       | expr '/' expr
  40       | expr '%' expr
  41       | '!' expr
  42       | '~' expr
  43       | '+' expr
  44       | '-' expr
  45       | '(' expr ')'
  46       | '$' INT8
  47       | PP ID
  48       | NN ID
  49       | ID PP
  50       | ID NN
  51       | ID
  52       | INT8
  53       | INT16
  54       | INT32
  55       | FLT
  56       | STR

  57  L :

  58  M :

  59  N :

state 0
	$accept : . stmts $end  (0)
	stmts : .  (2)

	.  reduce 2

	stmts  goto 1


state 1
	$accept : stmts . $end  (0)
	stmts : stmts . stmt  (1)

	$end  accept
	error  shift 2
	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	DO  shift 9
	FOR  shift 10
	IF  shift 11
	RETURN  shift 12
	WHILE  shift 13
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	';'  shift 19
	'('  shift 20
	'{'  shift 21
	'~'  shift 22
	'$'  shift 23
	.  error

	stmt  goto 24
	expr  goto 25


state 2
	stmt : error . ';'  (11)

	';'  shift 26
	.  error


state 3
	expr : ID . '=' expr  (12)
	expr : ID . PA expr  (13)
	expr : ID . NA expr  (14)
	expr : ID . TA expr  (15)
	expr : ID . DA expr  (16)
	expr : ID . MA expr  (17)
	expr : ID . AA expr  (18)
	expr : ID . XA expr  (19)
	expr : ID . OA expr  (20)
	expr : ID . LA expr  (21)
	expr : ID . RA expr  (22)
	expr : ID . PP  (49)
	expr : ID . NN  (50)
	expr : ID .  (51)

	PA  shift 27
	NA  shift 28
	TA  shift 29
	DA  shift 30
	MA  shift 31
	AA  shift 32
	XA  shift 33
	OA  shift 34
	LA  shift 35
	RA  shift 36
	PP  shift 37
	NN  shift 38
	'='  shift 39
	OR  reduce 51
	AN  reduce 51
	EQ  reduce 51
	NE  reduce 51
	LE  reduce 51
	GE  reduce 51
	LS  reduce 51
	RS  reduce 51
	'&'  reduce 51
	'|'  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	';'  reduce 51
	')'  reduce 51
	'^'  reduce 51
	'<'  reduce 51
	'>'  reduce 51
	'%'  reduce 51


state 4
	expr : INT8 .  (52)

	.  reduce 52


state 5
	expr : INT16 .  (53)

	.  reduce 53


state 6
	expr : INT32 .  (54)

	.  reduce 54


state 7
	expr : FLT .  (55)

	.  reduce 55


state 8
	expr : STR .  (56)

	.  reduce 56


state 9
	stmt : DO . stmt WHILE '(' expr ')' ';'  (7)

	error  shift 2
	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	DO  shift 9
	FOR  shift 10
	IF  shift 11
	RETURN  shift 12
	WHILE  shift 13
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	';'  shift 19
	'('  shift 20
	'{'  shift 21
	'~'  shift 22
	'$'  shift 23
	.  error

	stmt  goto 40
	expr  goto 25


state 10
	stmt : FOR . '(' expr ';' expr ';' expr ')' stmt  (8)

	'('  shift 41
	.  error


state 11
	stmt : IF . '(' expr M ')' stmt N ELSE L stmt L  (5)

	'('  shift 42
	.  error


state 12
	stmt : RETURN . expr ';'  (9)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 43


state 13
	stmt : WHILE . '(' L expr M ')' stmt N L  (6)

	'('  shift 44
	.  error


state 14
	expr : PP . ID  (47)

	ID  shift 45
	.  error


state 15
	expr : NN . ID  (48)

	ID  shift 46
	.  error


state 16
	expr : '+' . expr  (43)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 47


state 17
	expr : '-' . expr  (44)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 48


state 18
	expr : '!' . expr  (41)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 49


state 19
	stmt : ';' .  (3)

	.  reduce 3


state 20
	expr : '(' . expr ')'  (45)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 50


state 21
	stmt : '{' . stmts '}'  (10)
	stmts : .  (2)

	.  reduce 2

	stmts  goto 51


state 22
	expr : '~' . expr  (42)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 52


state 23
	expr : '$' . INT8  (46)

	INT8  shift 53
	.  error


state 24
	stmts : stmts stmt .  (1)

	.  reduce 1


state 25
	stmt : expr . ';'  (4)
	expr : expr . OR expr  (23)
	expr : expr . AN expr  (24)
	expr : expr . '|' expr  (25)
	expr : expr . '^' expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . EQ expr  (28)
	expr : expr . NE expr  (29)
	expr : expr . '<' expr  (30)
	expr : expr . '>' expr  (31)
	expr : expr . LE expr  (32)
	expr : expr . GE expr  (33)
	expr : expr . LS expr  (34)
	expr : expr . RS expr  (35)
	expr : expr . '+' expr  (36)
	expr : expr . '-' expr  (37)
	expr : expr . '*' expr  (38)
	expr : expr . '/' expr  (39)
	expr : expr . '%' expr  (40)

	OR  shift 54
	AN  shift 55
	EQ  shift 56
	NE  shift 57
	LE  shift 58
	GE  shift 59
	LS  shift 60
	RS  shift 61
	'&'  shift 62
	'|'  shift 63
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	';'  shift 68
	'^'  shift 69
	'<'  shift 70
	'>'  shift 71
	'%'  shift 72
	.  error


state 26
	stmt : error ';' .  (11)

	.  reduce 11


state 27
	expr : ID PA . expr  (13)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 73


state 28
	expr : ID NA . expr  (14)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 74


state 29
	expr : ID TA . expr  (15)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 75


state 30
	expr : ID DA . expr  (16)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 76


state 31
	expr : ID MA . expr  (17)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 77


state 32
	expr : ID AA . expr  (18)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 78


state 33
	expr : ID XA . expr  (19)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 79


state 34
	expr : ID OA . expr  (20)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 80


state 35
	expr : ID LA . expr  (21)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 81


state 36
	expr : ID RA . expr  (22)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 82


state 37
	expr : ID PP .  (49)

	.  reduce 49


state 38
	expr : ID NN .  (50)

	.  reduce 50


state 39
	expr : ID '=' . expr  (12)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 83


state 40
	stmt : DO stmt . WHILE '(' expr ')' ';'  (7)

	WHILE  shift 84
	.  error


state 41
	stmt : FOR '(' . expr ';' expr ';' expr ')' stmt  (8)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 85


state 42
	stmt : IF '(' . expr M ')' stmt N ELSE L stmt L  (5)

	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	'('  shift 20
	'~'  shift 22
	'$'  shift 23
	.  error

	expr  goto 86


state 43
	stmt : RETURN expr . ';'  (9)
	expr : expr . OR expr  (23)
	expr : expr . AN expr  (24)
	expr : expr . '|' expr  (25)
	expr : expr . '^' expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . EQ expr  (28)
	expr : expr . NE expr  (29)
	expr : expr . '<' expr  (30)
	expr : expr . '>' expr  (31)
	expr : expr . LE expr  (32)
	expr : expr . GE expr  (33)
	expr : expr . LS expr  (34)
	expr : expr . RS expr  (35)
	expr : expr . '+' expr  (36)
	expr : expr . '-' expr  (37)
	expr : expr . '*' expr  (38)
	expr : expr . '/' expr  (39)
	expr : expr . '%' expr  (40)

	OR  shift 54
	AN  shift 55
	EQ  shift 56
	NE  shift 57
	LE  shift 58
	GE  shift 59
	LS  shift 60
	RS  shift 61
	'&'  shift 62
	'|'  shift 63
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	';'  shift 87
	'^'  shift 69
	'<'  shift 70
	'>'  shift 71
	'%'  shift 72
	.  error


state 44
	stmt : WHILE '(' . L expr M ')' stmt N L  (6)
	L : .  (57)

	.  reduce 57

	L  goto 88


state 45
	expr : PP ID .  (47)

	.  reduce 47


state 46
	expr : NN ID .  (48)

	.  reduce 48


47: shift/reduce conflict (shift 56, reduce 43) on EQ
47: shift/reduce conflict (shift 57, reduce 43) on NE
47: shift/reduce conflict (shift 58, reduce 43) on LE
47: shift/reduce conflict (shift 59, reduce 43) on GE
47: shift/reduce conflict (shift 60, reduce 43) on LS
47: shift/reduce conflict (shift 61, reduce 43) on RS
47: shift/reduce conflict (shift 69, reduce 43) on '^'
47: shift/reduce conflict (shift 70, reduce 43) on '<'
47: shift/reduce conflict (shift 71, reduce 43) on '>'
47: shift/reduce conflict (shift 72, reduce 43) on '%'
state 47
	expr : expr . OR expr  (23)
	expr : expr . AN expr  (24)
	expr : expr . '|' expr  (25)
	expr : expr . '^' expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . EQ expr  (28)
	expr : expr . NE expr  (29)
	expr : expr . '<' expr  (30)
	expr : expr . '>' expr  (31)
	expr : expr . LE expr  (32)
	expr : expr . GE expr  (33)
	expr : expr . LS expr  (34)
	expr : expr . RS expr  (35)
	expr : expr . '+' expr  (36)
	expr : expr . '-' expr  (37)
	expr : expr . '*' expr  (38)
	expr : expr . '/' expr  (39)
	expr : expr . '%' expr  (40)
	expr : '+' expr .  (43)

	EQ  shift 56
	NE  shift 57
	LE  shift 58
	GE  shift 59
	LS  shift 60
	RS  shift 61
	'^'  shift 69
	'<'  shift 70
	'>'  shift 71
	'%'  shift 72
	OR  reduce 43
	AN  reduce 43
	'&'  reduce 43
	'|'  reduce 43
	'+'  reduce 43
	'-'  reduce 43
	'*'  reduce 43
	'/'  reduce 43
	';'  reduce 43
	')'  reduce 43


48: shift/reduce conflict (shift 56, reduce 44) on EQ
48: shift/reduce conflict (shift 57, reduce 44) on NE
48: shift/reduce conflict (shift 58, reduce 44) on LE
48: shift/reduce conflict (shift 59, reduce 44) on GE
48: shift/reduce conflict (shift 60, reduce 44) on LS
48: shift/reduce conflict (shift 61, reduce 44) on RS
48: shift/reduce conflict (shift 69, reduce 44) on '^'
48: shift/reduce conflict (shift 70, reduce 44) on '<'
48: shift/reduce conflict (shift 71, reduce 44) on '>'
48: shift/reduce conflict (shift 72, reduce 44) on '%'
state 48
	expr : expr . OR expr  (23)
	expr : expr . AN expr  (24)
	expr : expr . '|' expr  (25)
	expr : expr . '^' expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . EQ expr  (28)
	expr : expr . NE expr  (29)
	expr : expr . '<' expr  (30)
	expr : expr . '>' expr  (31)
	expr : expr . LE expr  (32)
	expr : expr . GE expr  (33)
	expr : expr . LS expr  (34)
	expr : expr . RS expr  (35)
	expr : expr . '+' expr  (36)
	expr : expr . '-' expr  (37)
	expr : expr . '*' expr  (38)
	expr : expr . '/' expr  (39)
	expr : expr . '%' expr  (40)
	expr : '-' expr .  (44)

	EQ  shift 56
	NE  shift 57
	LE  shift 58
	GE  shift 59
	LS  shift 60
	RS  shift 61
	'^'  shift 69
	'<'  shift 70
	'>'  shift 71
	'%'  shift 72
	OR  reduce 44
	AN  reduce 44
	'&'  reduce 44
	'|'  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	';'  reduce 44
	')'  reduce 44


49: shift/reduce conflict (shift 56, reduce 41) on EQ
49: shift/reduce conflict (shift 57, reduce 41) on NE
49: shift/reduce conflict (shift 58, reduce 41) on LE
49: shift/reduce conflict (shift 59, reduce 41) on GE
49: shift/reduce conflict (shift 60, reduce 41) on LS
49: shift/reduce conflict (shift 61, reduce 41) on RS
49: shift/reduce conflict (shift 69, reduce 41) on '^'
49: shift/reduce conflict (shift 70, reduce 41) on '<'
49: shift/reduce conflict (shift 71, reduce 41) on '>'
49: shift/reduce conflict (shift 72, reduce 41) on '%'
state 49
	expr : expr . OR expr  (23)
	expr : expr . AN expr  (24)
	expr : expr . '|' expr  (25)
	expr : expr . '^' expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . EQ expr  (28)
	expr : expr . NE expr  (29)
	expr : expr . '<' expr  (30)
	expr : expr . '>' expr  (31)
	expr : expr . LE expr  (32)
	expr : expr . GE expr  (33)
	expr : expr . LS expr  (34)
	expr : expr . RS expr  (35)
	expr : expr . '+' expr  (36)
	expr : expr . '-' expr  (37)
	expr : expr . '*' expr  (38)
	expr : expr . '/' expr  (39)
	expr : expr . '%' expr  (40)
	expr : '!' expr .  (41)

	EQ  shift 56
	NE  shift 57
	LE  shift 58
	GE  shift 59
	LS  shift 60
	RS  shift 61
	'^'  shift 69
	'<'  shift 70
	'>'  shift 71
	'%'  shift 72
	OR  reduce 41
	AN  reduce 41
	'&'  reduce 41
	'|'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	';'  reduce 41
	')'  reduce 41


state 50
	expr : expr . OR expr  (23)
	expr : expr . AN expr  (24)
	expr : expr . '|' expr  (25)
	expr : expr . '^' expr  (26)
	expr : expr . '&' expr  (27)
	expr : expr . EQ expr  (28)
	expr : expr . NE expr  (29)
	expr : expr . '<' expr  (30)
	expr : expr . '>' expr  (31)
	expr : expr . LE expr  (32)
	expr : expr . GE expr  (33)
	expr : expr . LS expr  (34)
	expr : expr . RS expr  (35)
	expr : expr . '+' expr  (36)
	expr : expr . '-' expr  (37)
	expr : expr . '*' expr  (38)
	expr : expr . '/' expr  (39)
	expr : expr . '%' expr  (40)
	expr : '(' expr . ')'  (45)

	OR  shift 54
	AN  shift 55
	EQ  shift 56
	NE  shift 57
	LE  shift 58
	GE  shift 59
	LS  shift 60
	RS  shift 61
	'&'  shift 62
	'|'  shift 63
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	')'  shift 89
	'^'  shift 69
	'<'  shift 70
	'>'  shift 71
	'%'  shift 72
	.  error


state 51
	stmts : stmts . stmt  (1)
	stmt : '{' stmts . '}'  (10)

	error  shift 2
	ID  shift 3
	INT8  shift 4
	INT16  shift 5
	INT32  shift 6
	FLT  shift 7
	STR  shift 8
	DO  shift 9
	FOR  shift 10
	IF  shift 11
	RETURN  shift 12
	WHILE  shift 13
	PP  shift 14
	NN  shift 15
	'+'  shift 16
	'-'  shift 17
	'!'  shift 18
	';'  shift 19
	'('  shift 20
	'{'  shift 21
	'}'  shift 90
	'~'  shift 22
	'$'  shift 23
	.  error

	stmt  goto 24
	expr  goto 25

